[package]
name = "astc-decode"
version = "0.3.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A software ASTC decoder in rust"
repository = "https://github.com/wwylele/astc-decode"
readme = "README.md"
keywords = ["image", "astc", "codec", "graphics", "texture"]
categories = ["multimedia::images", "encoding"]

[dependencies]

[dev-dependencies]
image = "0.23"
criterion = "0.3"
rand = "0.8"
rand_pcg = "0.3"

[[bench]]
name = "benchmark"
harness = false
